--- a/kocomRS485/config.json
+++ b/kocomRS485/config.json
@@ -19,10 +19,10 @@
   ],
   "options": {
     "RS485": {
-      "type": "Serial"
+      "type": "Socket"
     },
     "Socket": {
-      "server": "192.168.x.x",
+      "server": "192.168.0.146",
       "port": 8899
     },
     "SocketDevice": {
@@ -36,17 +36,17 @@
     },
     "MQTT": {
       "anonymous": false,
-      "server": "192.168.x.x",
-      "username": "id",
-      "password": "pw"
+      "server": "192.168.0.144",
+      "username": "omnihyun",
+      "password": "hyun9736"
     },
     "Wallpad": {
-      "light": false,
-      "plug": false,
-      "thermostat": false,
-      "fan": false,
-      "gas": false,
-      "elevator": false
+      "light": true,
+      "plug": true,
+      "thermostat": true,
+      "fan": true,
+      "gas": true,
+      "elevator": true
     },
     "Advanced": {
       "INIT_TEMP": 22,
@@ -58,7 +58,7 @@
     "KOCOM_LIGHT_SIZE": [
       {
         "name": "livingroom",
-        "number": 3
+        "number": 4
       },
       {
         "name": "bedroom",
@@ -66,11 +66,15 @@
       },
       {
         "name": "room1",
-        "number": 2
+        "number": 1
       },
       {
         "name": "room2",
-        "number": 2
+        "number": 1
+      },
+      {
+        "name": "room3",
+        "number": 1
       },
       {
         "name": "kitchen",
@@ -80,7 +84,7 @@
     "KOCOM_PLUG_SIZE": [
       {
         "name": "livingroom",
-        "number": 3
+        "number": 2
       },
       {
         "name": "bedroom",
@@ -95,8 +99,12 @@
         "number": 2
       },
       {
+        "name": "room3",
+        "number": 2
+      },
+      {
         "name": "kitchen",
-        "number": 3
+        "number": 2
       }
     ],
     "KOCOM_ROOM": [
@@ -104,13 +112,15 @@
       "bedroom",
       "room1",
       "room2",
+      "room3",
       "kitchen"
     ],
     "KOCOM_ROOM_THERMOSTAT": [
       "livingroom",
       "bedroom",
       "room1",
-      "room2"
+      "room2",
+      "room3"
     ]
   },
   "schema": {
