--- a/kocomRS485/config.json
+++ b/kocomRS485/config.json
@@ -1,6 +1,6 @@
 {
   "name": "Kocom Wallpad Controller with RS485",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "slug": "kocom_wallpad",
   "description": "Kocom Wallpad Controller for Homeassistant",
   "arch": [
@@ -45,7 +45,7 @@
       "plug": true,
       "thermostat": true,
       "fan": true,
-      "gas": true,
+      "gas": false,
       "elevator": true
     },
     "Advanced": {
